# Orbital

./: CMakeLists.txt  LICENSE  README.md
docs/: RELEASE_V1.md  UPDATE_DEPLOY_SOP.md
qml/: AboutPage.qml  LineChart.qml  Main.qml  SettingsPage.qml  SystemDetailsPage.qml  TerminalColorSchemePage.qml  TerminalPage.qml  TerminalView.qml  WifiConnectPage.qml
scripts/: orbital_update.sh  orbital_web.py  presence_detector.py  run.sh
src/: SystemMonitor.cpp  SystemMonitor.h  main.cpp
src/backend/: DisplayBackend.cpp  DisplayBackend.h  PresenceDetectorBackend.cpp  PresenceDetectorBackend.h  RemoteServersBackend.cpp  RemoteServersBackend.h  SystemDetailsBackend.cpp  SystemDetailsBackend.h  SystemHelpers.h  SystemStatsBackend.cpp  SystemStatsBackend.h  TerminalBackend.cpp  TerminalBackend.h  WifiBackend.cpp
